// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`aromatic: coronene > matches the recorded layout metrics 1`] = `
{
  "bondLengthCV": 0,
  "edges": 30,
  "minAtomDist": 30,
  "overlap": 0,
  "rings": 7,
  "vertices": 24,
}
`;

exports[`aromatic: heme-b > matches the recorded layout metrics 1`] = `
{
  "bondLengthCV": 0.071,
  "edges": 47,
  "minAtomDist": 30,
  "overlap": 0,
  "rings": 5,
  "vertices": 43,
}
`;

exports[`cage: cubane > matches the recorded layout metrics 1`] = `
{
  "bondLengthCV": 0.068,
  "edges": 12,
  "minAtomDist": 12.57,
  "overlap": 0.66,
  "rings": 5,
  "vertices": 8,
}
`;

exports[`cage: dodecahedrane > matches the recorded layout metrics 1`] = `
{
  "bondLengthCV": 0.124,
  "edges": 30,
  "minAtomDist": 20.6,
  "overlap": 3.22,
  "rings": 11,
  "vertices": 20,
}
`;

exports[`charged: cisplatin > matches the recorded layout metrics 1`] = `
{
  "bondLengthCV": 0,
  "edges": 4,
  "minAtomDist": 30,
  "overlap": 0,
  "rings": 0,
  "vertices": 5,
}
`;

exports[`charged: glutathione > matches the recorded layout metrics 1`] = `
{
  "bondLengthCV": 0,
  "edges": 20,
  "minAtomDist": 30,
  "overlap": 0,
  "rings": 0,
  "vertices": 21,
}
`;

exports[`charged: sulfated-disaccharide > matches the recorded layout metrics 1`] = `
{
  "bondLengthCV": 0,
  "edges": 43,
  "minAtomDist": 10.42,
  "overlap": 4.98,
  "rings": 2,
  "vertices": 42,
}
`;

exports[`ez: arachidonic-acid > matches the recorded layout metrics 1`] = `
{
  "bondLengthCV": 0,
  "edges": 21,
  "minAtomDist": 30,
  "overlap": 0,
  "rings": 0,
  "vertices": 22,
}
`;

exports[`ez: dha > matches the recorded layout metrics 1`] = `
{
  "bondLengthCV": 0,
  "edges": 23,
  "minAtomDist": 0,
  "overlap": 2.89,
  "rings": 0,
  "vertices": 24,
}
`;

exports[`fused: cholesterol > matches the recorded layout metrics 1`] = `
{
  "bondLengthCV": 0,
  "edges": 37,
  "minAtomDist": 10.42,
  "overlap": 2.37,
  "rings": 4,
  "vertices": 34,
}
`;

exports[`fused: colchicine > matches the recorded layout metrics 1`] = `
{
  "bondLengthCV": 0,
  "edges": 32,
  "minAtomDist": 30,
  "overlap": 0,
  "rings": 3,
  "vertices": 30,
}
`;

exports[`fused: quinine > matches the recorded layout metrics 1`] = `
{
  "bondLengthCV": 0.095,
  "edges": 31,
  "minAtomDist": 13.35,
  "overlap": 5.06,
  "rings": 4,
  "vertices": 28,
}
`;

exports[`fused: reserpine > matches the recorded layout metrics 1`] = `
{
  "bondLengthCV": 0,
  "edges": 55,
  "minAtomDist": 10.42,
  "overlap": 1.33,
  "rings": 6,
  "vertices": 50,
}
`;

exports[`heteroaromatic: atorvastatin > matches the recorded layout metrics 1`] = `
{
  "bondLengthCV": 0,
  "edges": 46,
  "minAtomDist": 21.96,
  "overlap": 0.27,
  "rings": 4,
  "vertices": 43,
}
`;

exports[`heteroaromatic: imatinib > matches the recorded layout metrics 1`] = `
{
  "bondLengthCV": 0,
  "edges": 41,
  "minAtomDist": 30,
  "overlap": 0,
  "rings": 5,
  "vertices": 37,
}
`;

exports[`heteroaromatic: montelukast > matches the recorded layout metrics 1`] = `
{
  "bondLengthCV": 0,
  "edges": 46,
  "minAtomDist": 26.5,
  "overlap": 0.22,
  "rings": 5,
  "vertices": 42,
}
`;

exports[`heteroaromatic: remdesivir > matches the recorded layout metrics 1`] = `
{
  "bondLengthCV": 0,
  "edges": 49,
  "minAtomDist": 21.96,
  "overlap": 0.9,
  "rings": 4,
  "vertices": 46,
}
`;

exports[`heteroaromatic: sildenafil > matches the recorded layout metrics 1`] = `
{
  "bondLengthCV": 0,
  "edges": 36,
  "minAtomDist": 30,
  "overlap": 0,
  "rings": 4,
  "vertices": 33,
}
`;

exports[`isotope: labelled-glycine > matches the recorded layout metrics 1`] = `
{
  "bondLengthCV": 0,
  "edges": 5,
  "minAtomDist": 30,
  "overlap": 0,
  "rings": 0,
  "vertices": 6,
}
`;

exports[`macrocycle: amphotericin-b > matches the recorded layout metrics 1`] = `
{
  "bondLengthCV": 0.067,
  "edges": 85,
  "minAtomDist": 10.42,
  "overlap": 5.69,
  "rings": 3,
  "vertices": 83,
}
`;

exports[`macrocycle: cyclosporin-a > matches the recorded layout metrics 1`] = `
{
  "bondLengthCV": 0,
  "edges": 97,
  "minAtomDist": 14.93,
  "overlap": 7.43,
  "rings": 1,
  "vertices": 97,
}
`;

exports[`macrocycle: erythromycin > matches the recorded layout metrics 1`] = `
{
  "bondLengthCV": 0,
  "edges": 68,
  "minAtomDist": 5.97,
  "overlap": 7.95,
  "rings": 3,
  "vertices": 66,
}
`;

exports[`macrocycle: rapamycin > matches the recorded layout metrics 1`] = `
{
  "bondLengthCV": 0.287,
  "edges": 82,
  "minAtomDist": 13.76,
  "overlap": 6.88,
  "rings": 4,
  "vertices": 79,
}
`;

exports[`macrocycle: taxol > matches the recorded layout metrics 1`] = `
{
  "bondLengthCV": 0.069,
  "edges": 76,
  "minAtomDist": 10.42,
  "overlap": 5.92,
  "rings": 7,
  "vertices": 70,
}
`;
